Fix some typos and improve writing

--- a/Tesis/anexoG.tex
+++ b/Tesis/anexoG.tex
@@ -1,7 +1,7 @@
 \chapter*{Anexo G: Comentarios de algunos expertos}\label{AnexoG}
 
 Estos comentarios han sido anonimizados y aleatoriazados para proteger la identidad de quienes los emitieron, pues se les garantizó anonimato en caso de que sus comentarios se publicaran.
-Muchos comentarios requierne más contexto para ser entendidos, puesto que se enmarcaban en medio de una prueba de usuario, frente a cierta interfaz. Por esta razón, se hizo una selección de comentarios y se muestran aquí.
+Muchos comentarios requieren más contexto para ser entendidos, puesto que se enmarcaban en medio de una prueba de usuario, frente a cierta interfaz. Por esta razón, se hizo una selección de comentarios y se muestran aquí.
 
 
 \newgeometry{margin=0.5in}
