--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -387,7 +387,7 @@ DOI = {10.3390/educsci9040276}
 }
 
 @misc{GithubRepo,
-  title={IGASCE GitHub Repository}, 
+  title={{IGACSE GitHub Repository}}, 
   author={Utreras, Alonso},
   howpublished = {\url{https://github.com/AlasAltum/Thesis-IGACSE}},  
   note = {Accessed: 2023-Nov-2}
@@ -457,7 +457,7 @@ DOI = {10.3390/educsci9040276}
 @misc{PlayFabTelemetry,
 title = {PlayFab PlayStream: Real-time event processing and monitoring for games},
 author = {Microsoft},
-howpublished = {\url{https://phys.org/news/2023-07-korean-team-room-temperature-ambient-pressure-superconductor.html}},
+url = {https://learn.microsoft.com/en-us/gaming/playfab/data-analytics/ingest-data/playstream-overview},
 note = {Accessed: 2023-11-18}
 }
 
@@ -490,8 +490,140 @@ note = {Accessed: 2023-11-18}
 }
 
 @inproceedings{ReviewGamesTeachingComputing,
-  title={{Games for Teaching Computing in Higher Education – A Systematic Review}},
+  title={{Games for Teaching Computing in Higher Education. A Systematic Review}},
   author={Paulo Eduardo Battistella and Christiane Gresse von Wangenheim},
   year={2016},
   url={https://api.semanticscholar.org/CorpusID:64431187}
+}
+
+
+@Inbook{IRTShojima2022,
+  author="Shojima, Kojiro",
+  title="Item Response Theory",
+  bookTitle="Test Data Engineering : Latent Rank Analysis, Biclustering, and Bayesian Network",
+  year="2022",
+  publisher="Springer Nature Singapore",
+  address="Singapore",
+  pages="85--154",
+  abstract="Item response theory (IRT; e.g., Lord, 1980; Hambleton and Swaminathan, 1984; Toyoda, 2012; van der Linden, 2016) is the most popular statistical model today as a background theory of test administration. The Program for International Student Assessment, Trends in International Mathematics and Science Study, and Test of English as a Foreign Language, as well as many global-scale tests, are designed based on IRT. In addition, this theory is increasingly becoming an essential subject, not only for students of educational measurement, but also for students of educational psychology in general.",
+  isbn="978-981-16-9986-3",
+  doi="10.1007/978-981-16-9986-3_4",
+  url="https://doi.org/10.1007/978-981-16-9986-3_4"
+}
+
+@inproceedings{Linden2015HandbookOI,
+  title={Handbook of item response theory},
+  author={Willem J. van der Linden},
+  year={2015},
+  url={https://api.semanticscholar.org/CorpusID:148192533}
+}
+
+@article{Reckase2009MultidimensionalIRT,
+  title={Multidimensional Item Response Theory},
+  author={Mark D. Reckase},
+  journal={Handbook of Statistics},
+  year={2009},
+  volume={26},
+  pages={607-642},
+  url={https://api.semanticscholar.org/CorpusID:118390094}
+}
+
+@inproceedings{CalderonStatisticalIRT,
+  title={Statistical methods for the analysis of Polytomous response data in non-cognitive tests},
+  author={{Francisca Loreto Calderón Maldonado}},
+  url={https://repositorio.uc.cl/handle/11534/62906}
+}
+
+@Article{RMIRT,
+  title = {{mirt}: A Multidimensional Item Response Theory Package for the {R} Environment},
+  author = {R. Philip Chalmers},
+  journal = {Journal of Statistical Software},
+  year = {2012},
+  volume = {48},
+  number = {6},
+  pages = {1--29},
+  doi = {10.18637/jss.v048.i06},
+  url = {{https://cran.r-project.org/web/packages/mirt/index.html}}
+}
+
+@article{RPackageMIRTCAT,
+  title = {Generating Adaptive and Non-Adaptive Test Interfaces for Multidimensional Item Response Theory Applications},
+  author = {R. Philip Chalmers},
+  journal = {Journal of Statistical Software},
+  year = {2016},
+  volume = {71},
+  number = {5},
+  pages = {1--39},
+  doi = {10.18637/jss.v071.i05},
+  url = {{https://cran.r-project.org/web/packages/mirtCAT/index.html}}
+}
+
+
+@article{TeoriaRespuestaAlItemPsicologia,
+  author = {{Attorresi, Horacio Félix Lozzia, Gabriela Susana Abal, Facundo Juan Pablo Galibert, María Silvia Aguerri, María Ester}}, 
+  title = {{Teoría de Respuesta al Ítem. Conceptos básicos y aplicaciones para la medición de constructos psicológicos}},
+  year = { 2009 }, 
+  journal = {{ Revista Argentina de Clínica Psicológica }},
+  keywords = {{ Teoría de Respuesta al ítem;  psicometría;  modelos psicométricos.; Item response theory;  psychometrics;  psychometric models. }},
+  issn = { 0327-6716 },
+  url = {https://www.redalyc.org/articulo.oa?id=281921792007 },
+}
+
+@misc{UE,
+  title={{Unreal Engine: The most powerful real-time 3D creation tool}},
+  author={Epic Games},
+  url={https://www.unrealengine.com/en-US/},
+  note = {Accessed on 2023-12-06}
+}
+
+@misc{Unity,
+  title={{Unity Game Engine}},
+  author={Unity Technologies},
+  url={https://unity.com/},
+  note = {Accessed on 2023-12-06}
+} 
+
+@misc{Godot,
+  title={{Godot Game Engine}},
+  author={Godot Foundation},
+  url={https://unity.com/},
+  note = {Accessed on 2023-12-06}
+} 
+
+@misc{GodotGithubRepository,
+  title={{Godot Github Repository}},
+  author={Godot Foundation},
+  url={https://github.com/godotengine/godot},
+  note = {Accessed on 2023-12-06}
+} 
+
+@misc{GodotCSharpGDDifferences,
+  title={{Godot CSharp Differences with GDScript}},
+  author={Godot Foundation},
+  url={https://docs.godotengine.org/en/3.5/tutorials/scripting/c_sharp/c_sharp_differences.html},
+  note = {Accessed on 2023-12-06}
+}
+
+
+@misc{GodotExport,
+  title={{Exporting Projects with Godot}},
+  author={Godot Foundation},
+  url={https://docs.godotengine.org/en/3.5/tutorials/export/exporting_projects.html},
+  note = {Accessed on 2023-12-06}
+}
+
+@article{Marinescu2018IncentivesCR,
+  title={Incentives Can Reduce Bias in Online Reviews},
+  author={Ioana E. Marinescu and Nadav Klein and Andrew Chamberlain and Morgan Smart},
+  journal={Economics of Networks eJournal},
+  year={2018},
+  url={https://api.semanticscholar.org/CorpusID:122833372}
+}
+
+@article{Dallmeyer2023ToPayOrNot,
+  title={To Pay or Not to Pay? The Effects of Monetary Compensation on Volunteers in Sports Clubs},
+  author={S{\"o}ren Dallmeyer and Christoph Breuer and Svenja Feiler},
+  journal={Nonprofit and Voluntary Sector Quarterly},
+  year={2023},
+  url={https://api.semanticscholar.org/CorpusID:265320832}
 }
