--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -19,7 +19,7 @@ Se dio por concluida esta fase una vez que los resultados de las pruebas de usua
 
 \subsection{Fase de evaluación académica y percepción de usuario}
 
-En esta fase, se logró la participación completa de una muestra de 15 personas.
+En esta fase, se logró la participación completa de una muestra de 15 personas, a quienes se les ofreció un incentivo monetario para evitar sesgos asociados del voluntario y conseguir más personas \cite{Marinescu2018IncentivesCR, Dallmeyer2023ToPayOrNot}.
 
 Para iniciar esta etapa, se realizó una convocatoria voluntaria en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció una remuneración a todas las personas que completaran la experiencia, que tenía una duración promedio de 45 minutos y constaba de tres partes: realizar la prueba de usuario, completar un formulario que utilizaba la escala de Likert basado en el modelo MEEGA+ \cite{meegaplus}, y responder a una prueba escrita basada en exámenes previos del curso Algoritmos y Estructuras de Datos.
 
